--- a/site/src/Students/AndyMelR.yml
+++ b/site/src/Students/AndyMelR.yml
@@ -59,4 +59,18 @@ experiences:
 
     Fooder(Colaborativo): Aplicacion para postear recetas, con creacion de usuario y marcado de recetas como favoritas.
       Tecnologias: React, Flux, StyledComponents, Python , Flask, SqlAlchemy, PostgreSql, Jwt, Git.
+
+  languages:  
+   -idiom: Spanish
+    level: Native
+
+    -idiom: Catalan
+     level: Native
+
+    -idiom: English
+     level: Professional
+
+     -idiom: French
+      level: User
+   
  
